@@ -21,12 +21,13 @@
 #include <cmath>
 
 #include "JPEGCompressor.h"
-
+#include <iostream>
 
 using namespace std;
 
 
-#define MX 65535
+// Minimum buffer size for output data
+#define MX 65536
 
 
 /* Since an ICC profile can be larger than the maximum size of a JPEG marker
@@ -46,6 +47,11 @@ using namespace std;
 #define MAX_DATA_BYTES_IN_MARKER  (MAX_BYTES_IN_MARKER - ICC_OVERHEAD_LEN)
 
 
+// XMP definitions
+#define XMP_PREFIX "http://ns.adobe.com/xap/1.0/%c%s"
+#define XMP_PREFIX_SIZE 29
+
+
 
 /* My version of the JPEG error_exit function. We want to pass control back
    to the program, so simply throw an exception
@@ -55,23 +61,19 @@ METHODDEF(void) iip_error_exit( j_common_ptr cinfo )
 {
   char buffer[ JMSG_LENGTH_MAX ];
 
-  /* Create the message
-   */
+  // Create the message
   (*cinfo->err->format_message) ( cinfo, buffer );
 
-  /* Let the memory manager delete any temp files before we die
-   */
+  // Let the memory manager delete any temp files before we die
   jpeg_destroy( cinfo );
 
-  /* throw an exception rather than print out a message and exit
-   */
+  // Throw an exception rather than print out a message and exit
   throw string( buffer );
 }
 
 
 
 extern "C" {
-
   void setup_error_functions( jpeg_compress_struct *a ){
     a->err->error_exit = iip_error_exit; 
   }
@@ -88,39 +90,14 @@ extern "C" {
 METHODDEF(void)
 iip_init_destination (j_compress_ptr cinfo)
 {
-  size_t mx;
   iip_dest_ptr dest = (iip_dest_ptr) cinfo->dest;
 
-  /* If we have set the strip height, we must be doing a buffer to buffer
-     compression, so only allocate enough for this strip. Otherwise allocate
-     memory for the whole image
-  */
-  if( dest->strip_height > 0 ){
-    mx = cinfo->image_width * dest->strip_height * cinfo->input_components;
-  }
-  else{
-    mx = cinfo->image_width * cinfo->image_height * cinfo->input_components;
-  }
-
-  /* Add some extra because when we have very small tiles, the JPEG data
-     including header can end up being larger than the original raw
-     data size, especially at high quality factors!
-  */
-  mx += MX;
-
-  /* Allocate the output buffer --- it will be released when done with image
-  dest->buffer = (JOCTET *)
-    (*cinfo->mem->alloc_small) ( (j_common_ptr) cinfo, JPOOL_IMAGE,
-				 mx * sizeof(JOCTET) );
-  */
-
-  // In fact just allocate with new
-  dest->buffer = new JOCTET[mx];
-  dest->size = mx;
-
+  // Number of bytes written
+  dest->written = 0;
+  
   // Set compressor pointers for library
-  dest->pub.next_output_byte = dest->buffer;
-  dest->pub.free_in_buffer = mx;
+  dest->pub.next_output_byte = dest->source;
+  dest->pub.free_in_buffer = dest->source_size;
 }
 
 
@@ -130,19 +107,21 @@ METHODDEF(boolean)
 iip_empty_output_buffer( j_compress_ptr cinfo )
 {
   iip_dest_ptr dest = (iip_dest_ptr) cinfo->dest;
-  size_t datacount = dest->size;
 
-  // Copy the JPEG data to our output tile buffer
-  if( datacount > 0 ){
-    if( datacount > cinfo->image_width*dest->strip_height*cinfo->input_components + MX ){
-      datacount = cinfo->image_width*dest->strip_height*cinfo->input_components + MX;
-    }
-    memcpy( dest->source, dest->buffer, datacount );
-  }
+  // If we reach here, our output tile buffer must be too small, so reallocate
+  unsigned int new_size = dest->source_size*2;
+  unsigned char *source = new unsigned char[new_size];
+  memcpy( source, dest->source, dest->source_size );
+
+  // Swap buffers
+  delete[] dest->source;
+  dest->source = source;
 
   // Reset the pointer to the beginning of the buffer
-  dest->pub.next_output_byte = dest->buffer;
-  dest->pub.free_in_buffer = datacount;
+  dest->written += dest->source_size;
+  dest->pub.free_in_buffer = new_size - dest->written;
+  dest->pub.next_output_byte = &(dest->source[dest->source_size]);
+  dest->source_size = new_size;
 
   return TRUE;
 }
@@ -162,16 +141,9 @@ iip_empty_output_buffer( j_compress_ptr cinfo )
 void iip_term_destination( j_compress_ptr cinfo )
 {
   iip_dest_ptr dest = (iip_dest_ptr) cinfo->dest;
-  size_t datacount = dest->size - dest->pub.free_in_buffer;
 
-  // Copy the JPEG data to our output tile buffer
-  if( datacount > 0 ){
-    memcpy( dest->source, dest->buffer, datacount );
-  }
-
-  dest->size = datacount;
-
-  delete[] dest->buffer;
+  // Update the number of bytes written
+  dest->written = dest->source_size - dest->pub.free_in_buffer;
 }
 
 
@@ -229,9 +201,20 @@ void JPEGCompressor::InitCompression( const RawTile& rawtile, unsigned int strip
 
   dest = (iip_dest_ptr) cinfo.dest;
   dest->pub.init_destination = iip_init_destination;
-  //dest->pub.empty_output_buffer = iip_empty_output_buffer;
+  dest->pub.empty_output_buffer = iip_empty_output_buffer;
   dest->pub.term_destination = iip_term_destination;
   dest->strip_height = strip_height;
+
+  // Calculate our metadata storage requirements
+  unsigned int metadata_size =
+    (icc.size()>0 ? (icc.size()+ICC_OVERHEAD_LEN) : 0) +
+    (xmp.size()>0 ? (xmp.size()+XMP_PREFIX_SIZE) : 0);
+
+  // Allocate enough memory for our header and metadata
+  unsigned long output_size = metadata_size + MX;
+  header = new unsigned char[output_size];
+  dest->source = header;
+  dest->source_size = output_size;
 
   cinfo.image_width = width;
   cinfo.image_height = height;
@@ -239,7 +222,7 @@ void JPEGCompressor::InitCompression( const RawTile& rawtile, unsigned int strip
   cinfo.in_color_space = ( channels == 3 ? JCS_RGB : JCS_GRAYSCALE );
   jpeg_set_defaults( &cinfo );
 
-  // Set our physical output resolution (JPEG only support integers)
+  // Set our physical output resolution (JPEG only supports integers)
   cinfo.X_density = round( dpi_x );
   cinfo.Y_density = round( dpi_y );
   cinfo.density_unit = dpi_units;
@@ -252,21 +235,6 @@ void JPEGCompressor::InitCompression( const RawTile& rawtile, unsigned int strip
 
   jpeg_start_compress( &cinfo, TRUE );
 
-
-  // Copy the JPEG header data to our output tile buffer
-  size_t datacount = dest->size - dest->pub.free_in_buffer;
-  header_size = datacount;
-  if( datacount > 0 ){
-    memcpy( header, dest->buffer, datacount );
-  }
-
-
-  // Reset the pointers
-  size_t mx = cinfo.image_width * strip_height * cinfo.input_components;
-  dest->size = mx + MX;
-  dest->pub.next_output_byte = dest->buffer;
-  dest->pub.free_in_buffer = mx + MX;
-
   // Add an identifying comment
   jpeg_write_marker( &cinfo, JPEG_COM, (const JOCTET*) "Generated by IIPImage", 21 );
 
@@ -275,6 +243,10 @@ void JPEGCompressor::InitCompression( const RawTile& rawtile, unsigned int strip
 
   // Add XMP metadata
   writeXMPMetadata();
+  
+  // Copy the encoded JPEG header data to a separate buffer
+  size_t datacount = dest->source_size - dest->pub.free_in_buffer;
+  header_size = datacount;
 
 }
 
@@ -288,29 +260,32 @@ unsigned int JPEGCompressor::CompressStrip( unsigned char* input, unsigned char*
 {
   JSAMPROW row[1];
   int row_stride = width * channels;
-  dest->source = output;
 
+  // First delete our header if we have one
+  if( header_size > 0 && header ){
+    delete[] header;
+    header = NULL;
+    header_size = 0;
+  }
+
+  // Setup our destination manager
+  dest->source = output;
+  dest->source_size = tile_height*width*channels + MX;
+  dest->pub.next_output_byte = output;
+  dest->pub.free_in_buffer = dest->source_size;
+
+  // Reset our scanline index
+  cinfo.next_scanline = 0;
+
+  // Now write out our scanlines
   while( cinfo.next_scanline < tile_height ) {
     row[0] = &input[ cinfo.next_scanline * row_stride ];
     jpeg_write_scanlines( &cinfo, row, 1 );
   }
 
-  // Copy the JPEG data to our output tile buffer
-  size_t datacount = dest->size - dest->pub.free_in_buffer;
-  if( datacount > 0 ){
-    // Be careful not to overun our buffer
-    if( datacount > tile_height*width*channels + MX ) datacount = tile_height*width*channels + MX;
-    memcpy( output, dest->buffer, datacount );
-  }
+  // Return the number of bytes written
+  return (dest->source_size - dest->pub.free_in_buffer);
 
-  // Set compressor pointers for library
-  size_t mx = cinfo.image_width * dest->strip_height * cinfo.input_components;
-  dest->pub.next_output_byte = dest->buffer;
-  dest->pub.free_in_buffer = mx + MX;
-  cinfo.next_scanline = 0;
-  dest->size = mx + MX;
-
-  return datacount;
 }
 
 
@@ -318,18 +293,20 @@ unsigned int JPEGCompressor::CompressStrip( unsigned char* input, unsigned char*
 
 unsigned int JPEGCompressor::Finish( unsigned char* output )
 {
+  // Reset pointers
   dest->source = output;
+  dest->pub.next_output_byte = dest->source;
+  dest->pub.free_in_buffer = dest->source_size;
 
-  // Tidy up and de-allocate memory
-  dest->pub.next_output_byte = dest->buffer;
+  // Need to set the scanline to the end for jpeg_finish_compress() to work
   cinfo.next_scanline = dest->strip_height;
+
+  // Close and destroy our structure
   jpeg_finish_compress( &cinfo );
-
-  size_t datacount = dest->size;
-
   jpeg_destroy_compress( &cinfo );
 
-  return datacount;
+  // Return number of bytes written
+  return ( dest->source_size - dest->pub.free_in_buffer );
 }
 
 
@@ -395,25 +372,37 @@ unsigned int JPEGCompressor::Compress( RawTile& rawtile )
   dest->pub.term_destination = iip_term_destination;
   dest->strip_height = 0;
 
-  // Allocate memory for our destination
-  dest->source = new unsigned char[width*height*channels + MX]; // Add some extra buffering
+  // Calculate our metadata storage requirements
+  unsigned int metadata_size =
+    (icc.size()>0 ? (icc.size()+ICC_OVERHEAD_LEN) : 0) +
+    (xmp.size()>0 ? (xmp.size()+XMP_PREFIX_SIZE) : 0);
 
-  // Set floating point quality (highest, but possibly slower depending
-  //  on hardware)
+  // Allocate enough memory for our compressed output data
+  // - compressed images at overly high quality factors can be larger than raw data
+  unsigned long output_size = (unsigned long)( (unsigned int)(width*height*channels*1.5) + metadata_size );
+  dest->source = new unsigned char[output_size]; // Add some extra buffering
+  dest->source_size = output_size;
+
+  // Set image information
   cinfo.image_width = width;
   cinfo.image_height = height;
   cinfo.input_components = channels;
   cinfo.in_color_space = ( channels == 3 ? JCS_RGB : JCS_GRAYSCALE );
   jpeg_set_defaults( &cinfo );
 
-  // Set compression quality (highest, but possibly slower depending
+  // Set our physical output resolution (JPEG only supports integers)
+  cinfo.X_density = round( dpi_x );
+  cinfo.Y_density = round( dpi_y );
+  cinfo.density_unit = dpi_units;
+  
+  // Set compression quality (fastest, but possibly slower depending
   //  on hardware) - must do this after we've set the defaults!
   cinfo.dct_method = JDCT_FASTEST;
 
   jpeg_set_quality( &cinfo, Q, TRUE );
 
   jpeg_start_compress( &cinfo, TRUE );
-
+  
   // Add an identifying comment
   jpeg_write_marker( &cinfo, JPEG_COM, (const JOCTET*) "Generated by IIPImage", 21 );
 
@@ -423,58 +412,42 @@ unsigned int JPEGCompressor::Compress( RawTile& rawtile )
   // Add XMP metadata
   writeXMPMetadata();
 
-
   // Send the tile data
-  unsigned int y;
   int row_stride = width * channels;
 
-  // Try to pass the whole image array at once if it is less than 512x512 pixels:
-  // Should be faster than scanlines.
-  if( (row_stride * height) <= (512*512*channels) ){
-
-    JSAMPROW *array = new JSAMPROW[height];
-    for( y=0; y < height; y++ ){
-      array[y] = &data[ y * row_stride ];
-    }
-    jpeg_write_scanlines( &cinfo, array, height );
-    delete[] array;
-
+  // Compress the image line by line
+  JSAMPROW row[1];
+  while( cinfo.next_scanline < cinfo.image_height ){
+    row[0] = &data[ cinfo.next_scanline * row_stride ];
+    jpeg_write_scanlines( &cinfo, row, 1 );
   }
-  else{
-    JSAMPROW row[1];
-    while( cinfo.next_scanline < cinfo.image_height ) {
-      row[0] = &data[ cinfo.next_scanline * row_stride ];
-      jpeg_write_scanlines( &cinfo, row, 1 );
-    }
-  }
-
 
   // Tidy up, get the compressed data size and de-allocate memory
   jpeg_finish_compress( &cinfo );
 
-  // Check that we have enough memory in our tile for the JPEG data.
-  // This can happen on small tiles with high quality factors. If so
-  // delete and reallocate memory.
-  y = dest->size;
-  if( y > rawtile.width*rawtile.height*rawtile.channels ){
+  // Check that we have enough memory in our Rawtile for the JPEG data.
+  // This can happen on small tiles with high quality factors. If so delete and reallocate memory.
+  unsigned long dataLength;
+  dataLength = dest->written;
+  if( dataLength > rawtile.dataLength ){
     delete[] (unsigned char*) rawtile.data;
-    rawtile.data = new unsigned char[y];
+    rawtile.data = new unsigned char[dataLength];
   }
-
+  
   // Copy memory back to the tile
-  memcpy( rawtile.data, dest->source, y );
+  memcpy( rawtile.data, dest->source, dataLength );
   delete[] dest->source;
   jpeg_destroy_compress( &cinfo );
 
 
   // Set the tile compression parameters
-  rawtile.dataLength = y;
+  rawtile.dataLength = dataLength;
   rawtile.compressionType = JPEG;
   rawtile.quality = Q;
 
 
   // Return the size of the data we have compressed
-  return y;
+  return dataLength;
 
 }
 
@@ -494,11 +467,13 @@ void JPEGCompressor::writeICCProfile()
   int cur_marker = 1;           // per spec, counting starts at 1
   unsigned int length;          // number of bytes to write in this marker
 
+  // Skip if our profile has zero size or is too big
+  //  if( icc.size() == 0 || icc.size() > MAX_DATA_BYTES_IN_MARKER ) return;
   if( icc.size() == 0 ) return;
 
   unsigned int icc_data_len = icc.size();
   const char* icc_data_ptr = icc.c_str();
-
+  
   // Calculate the number of markers we'll need, rounding up of course
   num_markers = icc_data_len / MAX_DATA_BYTES_IN_MARKER;
   if( num_markers * MAX_DATA_BYTES_IN_MARKER != icc_data_len ){
@@ -513,7 +488,7 @@ void JPEGCompressor::writeICCProfile()
       length = MAX_DATA_BYTES_IN_MARKER;
     }
     icc_data_len -= length;
-
+    
     // Write the JPEG marker header (APP2 code and marker length)
     jpeg_write_m_header( &cinfo, ICC_MARKER,
 			 (unsigned int) (length + ICC_OVERHEAD_LEN) );
@@ -538,7 +513,7 @@ void JPEGCompressor::writeICCProfile()
     jpeg_write_m_byte( &cinfo, cur_marker );
     jpeg_write_m_byte( &cinfo, (int) num_markers );
 
-    // Add the profile data
+    // Write the profile data byte by byte
     while( length-- ){
       jpeg_write_m_byte(&cinfo, *icc_data_ptr);
       icc_data_ptr++;
@@ -552,7 +527,7 @@ void JPEGCompressor::writeICCProfile()
 void JPEGCompressor::writeXMPMetadata()
 {
   // Make sure our XMP data has a valid size (namespace prefix is 29 bytes)
-  if( xmp.size()==0 || xmp.size()>(65536-29) ) return;
+  if( xmp.size()==0 || xmp.size()>(65536-XMP_PREFIX_SIZE) ) return;
 
   // The XMP data in a JPEG stream needs to be prefixed with a zero-terminated ID string
   // ref http://www.adobe.com/content/dam/Adobe/en/devnet/xmp/pdfs/cs6/XMPSpecificationPart3.pdf (pp13-14)
@@ -560,10 +535,8 @@ void JPEGCompressor::writeXMPMetadata()
   char xmpstr[65536];	// per spec, XMP max size is 65502; namespace prefix/id is 29 bytes
 
   // '0' should be 0, but snprintf is too smart...
-  //  snprintf( xmpstr, 65536, "http://ns.adobe.com/xap/1.0/%c%s", '0', xmp.c_str() );
-  snprintf( xmpstr, 65536, "http://ns.adobe.com/xap/1.0/%c%s", '\0', xmp.c_str() );
-  //  xmpstr[28] = 0; // overwrite '0'
+  snprintf( xmpstr, 65536, XMP_PREFIX, '\0', xmp.c_str() );
 
   // Can't use regular addMetadata, because of the zero term after the namespace id; and the APP1 marker
-  jpeg_write_marker( &cinfo, JPEG_APP0+1, (const JOCTET*) xmpstr, 29 + xmp.size() );
+  jpeg_write_marker( &cinfo, JPEG_APP0+1, (const JOCTET*) xmpstr, XMP_PREFIX_SIZE + xmp.size() );
 }
